--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             .mBackground {
                 background-color: rgb(0, 0, 0);
-                background-image: url("https://bafybeifxgpfjrq5o2r2rtma6kv7tlq7cxnkuw6su5ce47as6tu5d7bx6ue.ipfs.dweb.link/seskamol_R.143.jpg");
+                background-image: url("https://bafybeibnptuuoonip4xmlxl7jxy6p6blcl7z7k2nvhjb4ygltz4rjwql64.ipfs.dweb.link/seskamol.cover.2022.jpg");
                 background-repeat: no-repeat;
                 background-size:auto;
                 cursor:move;
